Removing unneeded variables

--- a/mods/xp_mod.cfg
+++ b/mods/xp_mod.cfg
@@ -3,7 +3,7 @@
 	name=_"XP Mod"
 	description=_"XP era of 1.10 written as configurable modification
 
-version 2.1.0 by Ravana - based on work by Dovolente, itota and Nosmos
+version 2.1.1 by Ravana - based on work by Dovolente, itota and Nosmos
 
 For units with drain all upgrades cost 1.5 times more"
 	require_modification=no
@@ -90,7 +90,7 @@ For units with drain all upgrades cost 1.5 times more"
 				[clear_menu_item]
 					id=xp_mod_a,xp_mod_b
 				[/clear_menu_item]
-				{CLEAR_VARIABLE Rav_XP_hp_cost,Rav_XP_hp_cost_drainer}
+				{CLEAR_VARIABLE Rav_XP_hp_cost,Rav_XP_hp_cost_drainer,Rav_XP_hp_amount}
 			[/then]
 		[/if]
 		[if]
@@ -102,7 +102,7 @@ For units with drain all upgrades cost 1.5 times more"
 				[clear_menu_item]
 					id=xp_mod_c,xp_mod_d
 				[/clear_menu_item]
-				{CLEAR_VARIABLE Rav_XP_move_cost,Rav_XP_move_cost_drainer}
+				{CLEAR_VARIABLE Rav_XP_move_cost,Rav_XP_move_cost_drainer,Rav_XP_move_amount}
 			[/then]
 		[/if]
 		[if]
@@ -114,7 +114,7 @@ For units with drain all upgrades cost 1.5 times more"
 				[clear_menu_item]
 					id=xp_mod_e,xp_mod_f
 				[/clear_menu_item]
-				{CLEAR_VARIABLE Rav_XP_damage_cost,Rav_XP_damage_cost_drainer}
+				{CLEAR_VARIABLE Rav_XP_damage_cost,Rav_XP_damage_cost_drainer,Rav_XP_damage_amount}
 			[/then]
 		[/if]
 		[if]
@@ -126,7 +126,7 @@ For units with drain all upgrades cost 1.5 times more"
 				[clear_menu_item]
 					id=xp_mod_g,xp_mod_h
 				[/clear_menu_item]
-				{CLEAR_VARIABLE Rav_XP_strike_cost,Rav_XP_strike_cost_drainer}
+				{CLEAR_VARIABLE Rav_XP_strike_cost,Rav_XP_strike_cost_drainer,Rav_XP_strike_amount}
 			[/then]
 		[/if]
 		[lua]
