Lua implementation, supports 1.13

--- a/macros/xp.cfg
+++ b/macros/xp.cfg
@@ -20,7 +20,7 @@
     [/not]
 #enddef
 
-#define XP_MOD_MENU AMOUNT COST APPLICATION ADJUSTMENT FILTER
+#define XP_MOD_MENU AMOUNT COST APPLICATION ADJUSTMENT FILTER DESC
     [show_if]
         [have_unit]
             x,y=$x1,$y1
@@ -32,221 +32,56 @@
         [/have_unit]
     [/show_if]
     [command]
-        [sound]
-            name=fanfare-short.wav
-        [/sound]
-        [object]
-            silent=yes
-            [filter]
-                x,y=$x1,$y1
-                side=$side_number
-            [/filter]
+        [xp_mod]
+            cost = {COST}
+            desc = {DESC}
             [effect]
                 apply_to={APPLICATION}
                 {ADJUSTMENT}={AMOUNT}
             [/effect]
-        [/object]
+        [/xp_mod]
+    [/command]
 #enddef
 
 #define XP_MOD_MENU_SETUP
     [set_menu_item]
         id=xp_mod_a
         description=_ "+$Rav_XP_hp_amount hp: $Rav_XP_hp_cost xp"
-        {XP_MOD_MENU $Rav_XP_hp_amount $Rav_XP_hp_cost hitpoints increase_total {XP_MOD_NOT_DRAIN}}
-        {MODIFY_UNIT x,y=$x1,$y1 experience "$($MODIFY_UNIT_store[$MODIFY_UNIT_i].experience-$Rav_XP_hp_cost)"}
-        [lua]
-            code = <<
-					local unit_name = wesnoth.get_variable "unit.name"
-					local unit_id = wesnoth.get_variable "unit.type"
-					local language_name = wesnoth.unit_types[unit_id].name
-					unit_name = unit_name .. " the " .. tostring(language_name)
-					local up_cost = wesnoth.get_variable "Rav_XP_hp_cost"
-					local up_amount = wesnoth.get_variable "Rav_XP_hp_amount"
-					up_cost = "I spent " .. up_cost .. " xp for +" .. up_amount .. " hp!"
-					wesnoth.message(tostring(unit_name),tostring(up_cost))
-				>>
-        [/lua]
-        [floating_text]
-            [filter]
-                id=$unit.id
-            [/filter]
-            text=_ "<span color='#BCB088'>+$Rav_XP_hp_amount hp</span>"
-        [/floating_text]
-    [/command]
-[/set_menu_item]
-[set_menu_item]
-    id=xp_mod_b
-    description=_ "+$Rav_XP_hp_amount hp: $Rav_XP_hp_cost_drainer xp"
-    {XP_MOD_MENU $Rav_XP_hp_amount $Rav_XP_hp_cost_drainer hitpoints increase_total {XP_MOD_DRAIN}}
-    {MODIFY_UNIT x,y=$x1,$y1 experience "$($MODIFY_UNIT_store[$MODIFY_UNIT_i].experience-$Rav_XP_hp_cost_drainer)"}
-    [lua]
-        code = <<
-					local unit_name = wesnoth.get_variable "unit.name"
-					local unit_id = wesnoth.get_variable "unit.type"
-					local language_name = wesnoth.unit_types[unit_id].name
-					unit_name = unit_name .. " the " .. tostring(language_name)
-					local up_cost = wesnoth.get_variable "Rav_XP_hp_cost_drainer"
-					local up_amount = wesnoth.get_variable "Rav_XP_hp_amount"
-					up_cost = "I spent " .. up_cost .. " xp for +" .. up_amount .. " hp!"
-					wesnoth.message(tostring(unit_name),tostring(up_cost))
-				>>
-    [/lua]
-    [floating_text]
-        [filter]
-            id=$unit.id
-        [/filter]
-        text=_ "<span color='#BCB088'>+$Rav_XP_hp_amount hp</span>"
-    [/floating_text]
-[/command]
-[/set_menu_item]
-[set_menu_item]
-    id=xp_mod_c
-    description=_ "+$Rav_XP_move_amount movement: $Rav_XP_move_cost xp"
-    {XP_MOD_MENU $Rav_XP_move_amount $Rav_XP_move_cost movement increase {XP_MOD_NOT_DRAIN}}
-    {MODIFY_UNIT x,y=$x1,$y1 experience "$($MODIFY_UNIT_store[$MODIFY_UNIT_i].experience-$Rav_XP_move_cost)"}
-    [lua]
-        code = <<
-					local unit_name = wesnoth.get_variable "unit.name"
-					local unit_id = wesnoth.get_variable "unit.type"
-					local language_name = wesnoth.unit_types[unit_id].name
-					unit_name = unit_name .. " the " .. tostring(language_name)
-					local up_cost = wesnoth.get_variable "Rav_XP_move_cost"
-					local up_amount = wesnoth.get_variable "Rav_XP_move_amount"
-					up_cost = "I spent " .. up_cost .. " xp for +" .. up_amount .. " movement!"
-					wesnoth.message(tostring(unit_name),tostring(up_cost))
-				>>
-    [/lua]
-    [floating_text]
-        [filter]
-            id=$unit.id
-        [/filter]
-        text=_ "<span color='#BCB088'>+$Rav_XP_move_amount movement</span>"
-    [/floating_text]
-[/command]
-[/set_menu_item]
-[set_menu_item]
-    id=xp_mod_d
-    description=_ "+$Rav_XP_move_amount movement: $Rav_XP_move_cost_drainer xp"
-    {XP_MOD_MENU $Rav_XP_move_amount $Rav_XP_move_cost_drainer movement increase {XP_MOD_DRAIN}}
-    {MODIFY_UNIT x,y=$x1,$y1 experience "$($MODIFY_UNIT_store[$MODIFY_UNIT_i].experience-$Rav_XP_move_cost_drainer)"}
-    [lua]
-        code = <<
-					local unit_name = wesnoth.get_variable "unit.name"
-					local unit_id = wesnoth.get_variable "unit.type"
-					local language_name = wesnoth.unit_types[unit_id].name
-					unit_name = unit_name .. " the " .. tostring(language_name)
-					local up_cost = wesnoth.get_variable "Rav_XP_move_cost_drainer"
-					local up_amount = wesnoth.get_variable "Rav_XP_move_amount"
-					up_cost = "I spent " .. up_cost .. " xp for +" .. up_amount .. " movement!"
-					wesnoth.message(tostring(unit_name),tostring(up_cost))
-				>>
-    [/lua]
-    [floating_text]
-        [filter]
-            id=$unit.id
-        [/filter]
-        text=_ "<span color='#BCB088'>+$Rav_XP_move_amount movement</span>"
-    [/floating_text]
-[/command]
-[/set_menu_item]
-[set_menu_item]
-    id=xp_mod_e
-    description=_ "+$Rav_XP_damage_amount damage: $Rav_XP_damage_cost xp"
-    {XP_MOD_MENU $Rav_XP_damage_amount $Rav_XP_damage_cost attack increase_damage {XP_MOD_NOT_DRAIN}}
-    {MODIFY_UNIT x,y=$x1,$y1 experience "$($MODIFY_UNIT_store[$MODIFY_UNIT_i].experience-$Rav_XP_damage_cost)"}
-    [lua]
-        code = <<
-					local unit_name = wesnoth.get_variable "unit.name"
-					local unit_id = wesnoth.get_variable "unit.type"
-					local language_name = wesnoth.unit_types[unit_id].name
-					unit_name = unit_name .. " the " .. tostring(language_name)
-					local up_cost = wesnoth.get_variable "Rav_XP_damage_cost"
-					local up_amount = wesnoth.get_variable "Rav_XP_damage_amount"
-					up_cost = "I spent " .. up_cost .. " xp for +" .. up_amount .. " damage!"
-					wesnoth.message(tostring(unit_name),tostring(up_cost))
-				>>
-    [/lua]
-    [floating_text]
-        [filter]
-            id=$unit.id
-        [/filter]
-        text=_ "<span color='#BCB088'>+$Rav_XP_damage_amount damage</span>"
-    [/floating_text]
-[/command]
-[/set_menu_item]
-[set_menu_item]
-    id=xp_mod_f
-    description=_ "+$Rav_XP_damage_amount damage: $Rav_XP_damage_cost_drainer xp"
-    {XP_MOD_MENU $Rav_XP_damage_amount $Rav_XP_damage_cost_drainer attack increase_damage {XP_MOD_DRAIN}}
-    {MODIFY_UNIT x,y=$x1,$y1 experience "$($MODIFY_UNIT_store[$MODIFY_UNIT_i].experience-$Rav_XP_damage_cost_drainer)"}
-    [lua]
-        code = <<
-					local unit_name = wesnoth.get_variable "unit.name"
-					local unit_id = wesnoth.get_variable "unit.type"
-					local language_name = wesnoth.unit_types[unit_id].name
-					unit_name = unit_name .. " the " .. tostring(language_name)
-					local up_cost = wesnoth.get_variable "Rav_XP_damage_cost_drainer"
-					local up_amount = wesnoth.get_variable "Rav_XP_damage_amount"
-					up_cost = "I spent " .. up_cost .. " xp for +" .. up_amount .. " damage!"
-					wesnoth.message(tostring(unit_name),tostring(up_cost))
-				>>
-    [/lua]
-    [floating_text]
-        [filter]
-            id=$unit.id
-        [/filter]
-        text=_ "<span color='#BCB088'>+$Rav_XP_damage_amount damage</span>"
-    [/floating_text]
-[/command]
-[/set_menu_item]
-[set_menu_item]
-    id=xp_mod_g
-    description=_ "+$Rav_XP_strike_amount strike: $Rav_XP_strike_cost xp"
-    {XP_MOD_MENU $Rav_XP_strike_amount $Rav_XP_strike_cost attack increase_attacks {XP_MOD_NOT_DRAIN}}
-    {MODIFY_UNIT x,y=$x1,$y1 experience "$($MODIFY_UNIT_store[$MODIFY_UNIT_i].experience-$Rav_XP_strike_cost)"}
-    [lua]
-        code = <<
-					local unit_name = wesnoth.get_variable "unit.name"
-					local unit_id = wesnoth.get_variable "unit.type"
-					local language_name = wesnoth.unit_types[unit_id].name
-					unit_name = unit_name .. " the " .. tostring(language_name)
-					local up_cost = wesnoth.get_variable "Rav_XP_strike_cost"
-					local up_amount = wesnoth.get_variable "Rav_XP_strike_amount"
-					up_cost = "I spent " .. up_cost .. " xp for +" .. up_amount .. " strike!"
-					wesnoth.message(tostring(unit_name),tostring(up_cost))
-				>>
-    [/lua]
-    [floating_text]
-        [filter]
-            id=$unit.id
-        [/filter]
-        text=_ "<span color='#BCB088'>+$Rav_XP_strike_amount strike</span>"
-    [/floating_text]
-[/command]
-[/set_menu_item]
-[set_menu_item]
-    id=xp_mod_h
-    description=_ "+$Rav_XP_strike_amount strike: $Rav_XP_strike_cost_drainer xp"
-    {XP_MOD_MENU $Rav_XP_strike_amount $Rav_XP_strike_cost_drainer attack increase_attacks {XP_MOD_DRAIN}}
-    {MODIFY_UNIT x,y=$x1,$y1 experience "$($MODIFY_UNIT_store[$MODIFY_UNIT_i].experience-$Rav_XP_strike_cost_drainer)"}
-    [lua]
-        code = <<
-					local unit_name = wesnoth.get_variable "unit.name"
-					local unit_id = wesnoth.get_variable "unit.type"
-					local language_name = wesnoth.unit_types[unit_id].name
-					unit_name = unit_name .. " the " .. tostring(language_name)
-					local up_cost = wesnoth.get_variable "Rav_XP_strike_cost_drainer"
-					local up_amount = wesnoth.get_variable "Rav_XP_strike_amount"
-					up_cost = "I spent " .. up_cost .. " xp for +" .. up_amount .. " strike!"
-					wesnoth.message(tostring(unit_name),tostring(up_cost))
-				>>
-    [/lua]
-    [floating_text]
-        [filter]
-            id=$unit.id
-        [/filter]
-        text=_ "<span color='#BCB088'>+$Rav_XP_strike_amount strike</span>"
-    [/floating_text]
-[/command]
-[/set_menu_item]
+        {XP_MOD_MENU $Rav_XP_hp_amount $Rav_XP_hp_cost hitpoints increase_total {XP_MOD_NOT_DRAIN} "+$Rav_XP_hp_amount hp"}
+    [/set_menu_item]
+    [set_menu_item]
+        id=xp_mod_b
+        description=_ "+$Rav_XP_hp_amount hp: $Rav_XP_hp_cost_drainer xp"
+        {XP_MOD_MENU $Rav_XP_hp_amount $Rav_XP_hp_cost_drainer hitpoints increase_total {XP_MOD_DRAIN} "+$Rav_XP_hp_amount hp"}
+    [/set_menu_item]
+    [set_menu_item]
+        id=xp_mod_c
+        description=_ "+$Rav_XP_move_amount movement: $Rav_XP_move_cost xp"
+        {XP_MOD_MENU $Rav_XP_move_amount $Rav_XP_move_cost movement increase {XP_MOD_NOT_DRAIN} "+$Rav_XP_move_amount movement"}
+    [/set_menu_item]
+    [set_menu_item]
+        id=xp_mod_d
+        description=_ "+$Rav_XP_move_amount movement: $Rav_XP_move_cost_drainer xp"
+        {XP_MOD_MENU $Rav_XP_move_amount $Rav_XP_move_cost_drainer movement increase {XP_MOD_DRAIN} "+$Rav_XP_move_amount movement"}
+    [/set_menu_item]
+    [set_menu_item]
+        id=xp_mod_e
+        description=_ "+$Rav_XP_damage_amount damage: $Rav_XP_damage_cost xp"
+        {XP_MOD_MENU $Rav_XP_damage_amount $Rav_XP_damage_cost attack increase_damage {XP_MOD_NOT_DRAIN} "+$Rav_XP_damage_amount damage"}
+    [/set_menu_item]
+    [set_menu_item]
+        id=xp_mod_f
+        description=_ "+$Rav_XP_damage_amount damage: $Rav_XP_damage_cost_drainer xp"
+        {XP_MOD_MENU $Rav_XP_damage_amount $Rav_XP_damage_cost_drainer attack increase_damage {XP_MOD_DRAIN} "+$Rav_XP_damage_amount damage"}
+    [/set_menu_item]
+    [set_menu_item]
+        id=xp_mod_g
+        description=_ "+$Rav_XP_strike_amount strike: $Rav_XP_strike_cost xp"
+        {XP_MOD_MENU $Rav_XP_strike_amount $Rav_XP_strike_cost attack increase_attacks {XP_MOD_NOT_DRAIN} "+$Rav_XP_strike_amount strike"}
+    [/set_menu_item]
+    [set_menu_item]
+        id=xp_mod_h
+        description=_ "+$Rav_XP_strike_amount strike: $Rav_XP_strike_cost_drainer xp"
+        {XP_MOD_MENU $Rav_XP_strike_amount $Rav_XP_strike_cost_drainer attack increase_attacks {XP_MOD_DRAIN} "+$Rav_XP_strike_amount strike"}
+    [/set_menu_item]
 #enddef
