--- a/mods/xp_mod.cfg
+++ b/mods/xp_mod.cfg
@@ -1,12 +1,13 @@
 [modification]
     id=Rav_XP_Mod
     name=_"XP Mod"
-    description=_"XP era of 1.10 written as configurable modification
+    description=_"Spend XP to upgrade units damage/strikes/health/movement.
 
-version 2.1.1 by Ravana - based on work by Dovolente, itota and Nosmos
+version 2.2.0 by Ravana - based on work by Dovolente, itota and Nosmos
 
 For units with drain all upgrades cost 1.5 times more"
     require_modification=no
+    type=hybrid
     [options]
         [checkbox]
             id=Rav_XP_hp_enabled
@@ -71,11 +72,66 @@ For units with drain all upgrades cost 1.5 times more"
     [/options]
 
     [event]
+        name=preload
+        first_time_only=no
+        [lua]
+            code=<<
+helper = wesnoth.require "lua/helper.lua"
+T = helper.set_wml_tag_metatable {}
+
+function wesnoth.wml_actions.xp_mod(cfg)
+
+	local event_context = wesnoth.current.event_context
+	local unit = wesnoth.get_unit(event_context.x1, event_context.y1)
+
+	wesnoth.play_sound("fanfare-short.wav")
+
+	unit:add_modification("object", {
+		T.effect (helper.get_child(cfg, "effect"))
+	})
+	unit.experience = unit.experience - cfg.cost
+
+	local speaker = string.format("%s the %s", tostring(unit.name),  tostring(wesnoth.unit_types[unit.type].name))
+	local message = string.format("I spent %s xp for %s!", cfg.cost,  tostring(cfg.desc))
+	wesnoth.message(speaker, message)
+
+	local floating_message = string.format("<span color='#BCB088'>%s</span>",  tostring(cfg.desc))
+	wesnoth.float_label(unit.x, unit.y, floating_message)
+end
+>>
+        [/lua]
+    [/event]
+
+    [event]
         name=turn 1
         {VARIABLE Rav_XP_hp_amount 4}
         {VARIABLE Rav_XP_move_amount 1}
         {VARIABLE Rav_XP_damage_amount 1}
         {VARIABLE Rav_XP_strike_amount 1}
+        [if]
+            [variable]
+                name=Rav_XP_hp_cost
+                equals=$empty
+            [/variable]
+            [then]
+                [chat]
+                    speaker=_"XP Modification"
+                    message=_"WARNING
+ 
+Settings not found. Expected cause is bug #23512. Fix is enabling Advanced Settings->Level options in campaign menu.
+ 
+Default settings assumed."
+                [/chat]
+                {VARIABLE Rav_XP_hp_cost 6}
+                {VARIABLE Rav_XP_move_cost 8}
+                {VARIABLE Rav_XP_damage_cost 16}
+                {VARIABLE Rav_XP_strike_cost 56}
+                {VARIABLE Rav_XP_hp_enabled true}
+                {VARIABLE Rav_XP_move_enabled true}
+                {VARIABLE Rav_XP_damage_enabled true}
+                {VARIABLE Rav_XP_strike_enabled true}
+            [/then]
+        [/if]
         {VARIABLE Rav_XP_hp_cost_drainer "$($Rav_XP_hp_cost * 15 / 10)"}
         {VARIABLE Rav_XP_move_cost_drainer "$($Rav_XP_move_cost * 15 / 10)"}
         {VARIABLE Rav_XP_damage_cost_drainer "$($Rav_XP_damage_cost * 15 / 10)"}
@@ -90,7 +146,7 @@ For units with drain all upgrades cost 1.5 times more"
                 [clear_menu_item]
                     id=xp_mod_a,xp_mod_b
                 [/clear_menu_item]
-                {CLEAR_VARIABLE Rav_XP_hp_cost,Rav_XP_hp_cost_drainer,Rav_XP_hp_amount}
+                {CLEAR_VARIABLE Rav_XP_hp_cost,Rav_XP_hp_cost_drainer}
             [/then]
         [/if]
         [if]
@@ -102,7 +158,7 @@ For units with drain all upgrades cost 1.5 times more"
                 [clear_menu_item]
                     id=xp_mod_c,xp_mod_d
                 [/clear_menu_item]
-                {CLEAR_VARIABLE Rav_XP_move_cost,Rav_XP_move_cost_drainer,Rav_XP_move_amount}
+                {CLEAR_VARIABLE Rav_XP_move_cost,Rav_XP_move_cost_drainer}
             [/then]
         [/if]
         [if]
@@ -114,7 +170,7 @@ For units with drain all upgrades cost 1.5 times more"
                 [clear_menu_item]
                     id=xp_mod_e,xp_mod_f
                 [/clear_menu_item]
-                {CLEAR_VARIABLE Rav_XP_damage_cost,Rav_XP_damage_cost_drainer,Rav_XP_damage_amount}
+                {CLEAR_VARIABLE Rav_XP_damage_cost,Rav_XP_damage_cost_drainer}
             [/then]
         [/if]
         [if]
@@ -126,7 +182,7 @@ For units with drain all upgrades cost 1.5 times more"
                 [clear_menu_item]
                     id=xp_mod_g,xp_mod_h
                 [/clear_menu_item]
-                {CLEAR_VARIABLE Rav_XP_strike_cost,Rav_XP_strike_cost_drainer,Rav_XP_strike_amount}
+                {CLEAR_VARIABLE Rav_XP_strike_cost,Rav_XP_strike_cost_drainer}
             [/then]
         [/if]
         [lua]
@@ -140,7 +196,7 @@ For units with drain all upgrades cost 1.5 times more"
 			if mp then settings = settings .. "Movement cost: " .. wesnoth.get_variable "Rav_XP_move_cost" .. " | " else end
 			if dmg then settings = settings .. "Damage cost: " .. wesnoth.get_variable "Rav_XP_damage_cost" .. " | " else end
 			if str then settings = settings .. "Strikes cost: " .. wesnoth.get_variable "Rav_XP_strike_cost" .. " | " else end
-			if settings == "" then else wesnoth.message("XP Mod version 2.1.0",settings) end
+			if settings == "" then else wesnoth.message("XP Mod version 2.2.0",settings) end
 			>>
         [/lua]
         {CLEAR_VARIABLE Rav_XP_strike_enabled,Rav_XP_damage_enabled,Rav_XP_move_enabled,Rav_XP_hp_enabled}
