Drainer penalty customization

--- a/mods/xp_mod.cfg
+++ b/mods/xp_mod.cfg
@@ -3,7 +3,7 @@
     name=_"XP Mod"
     description=_"Spend XP to upgrade units damage/strikes/health/movement.
 
-version 2.2.0 by Ravana - based on work by Dovolente, itota and Nosmos
+version 2.3.0 by Ravana - based on work by vn971, Dovolente, itota and Nosmos
 
 For units with drain all upgrades cost 1.5 times more"
     require_modification=no
@@ -69,6 +69,15 @@ For units with drain all upgrades cost 1.5 times more"
             name=_"Strike cost"
             description=_"XP required to upgrade strikes"
         [/slider]
+        [slider]
+            id=Rav_XP_drainer_penalty
+            default=50
+            min=0
+            max=100
+            step=10
+            name=_"Drainer penalty %"
+            description=_"XP cost penalty for drainers, in percent"
+        [/slider]
     [/options]
 
     [event]
@@ -132,10 +141,10 @@ Default settings assumed."
                 {VARIABLE Rav_XP_strike_enabled true}
             [/then]
         [/if]
-        {VARIABLE Rav_XP_hp_cost_drainer "$($Rav_XP_hp_cost * 15 / 10)"}
-        {VARIABLE Rav_XP_move_cost_drainer "$($Rav_XP_move_cost * 15 / 10)"}
-        {VARIABLE Rav_XP_damage_cost_drainer "$($Rav_XP_damage_cost * 15 / 10)"}
-        {VARIABLE Rav_XP_strike_cost_drainer "$($Rav_XP_strike_cost * 15 / 10)"}
+        {VARIABLE Rav_XP_hp_cost_drainer "$($Rav_XP_hp_cost * ($Rav_XP_drainer_penalty + 100) / 100)"}
+        {VARIABLE Rav_XP_move_cost_drainer "$($Rav_XP_move_cost * ($Rav_XP_drainer_penalty + 100) / 100)"}
+        {VARIABLE Rav_XP_damage_cost_drainer "$($Rav_XP_damage_cost * ($Rav_XP_drainer_penalty + 100) / 100)"}
+        {VARIABLE Rav_XP_strike_cost_drainer "$($Rav_XP_strike_cost * ($Rav_XP_drainer_penalty + 100) / 100)"}
         {XP_MOD_MENU_SETUP}
         [if]
             [variable]
@@ -196,9 +205,9 @@ Default settings assumed."
 			if mp then settings = settings .. "Movement cost: " .. wesnoth.get_variable "Rav_XP_move_cost" .. " | " else end
 			if dmg then settings = settings .. "Damage cost: " .. wesnoth.get_variable "Rav_XP_damage_cost" .. " | " else end
 			if str then settings = settings .. "Strikes cost: " .. wesnoth.get_variable "Rav_XP_strike_cost" .. " | " else end
-			if settings == "" then else wesnoth.message("XP Mod version 2.2.0",settings) end
+			if settings == "" then else wesnoth.message("XP Mod version 2.3.0",settings) end
 			>>
         [/lua]
-        {CLEAR_VARIABLE Rav_XP_strike_enabled,Rav_XP_damage_enabled,Rav_XP_move_enabled,Rav_XP_hp_enabled}
+        {CLEAR_VARIABLE Rav_XP_strike_enabled,Rav_XP_damage_enabled,Rav_XP_move_enabled,Rav_XP_hp_enabled,Rav_XP_drainer_penalty}
     [/event]
 [/modification]
