--- a/mods/xp_mod.cfg
+++ b/mods/xp_mod.cfg
@@ -5,7 +5,7 @@
 
 version 2.3.0 by Ravana - based on work by vn971, Dovolente, itota and Nosmos
 
-For units with drain all upgrades cost 1.5 times more"
+Units with drain ability have higher upgrade cost"
     require_modification=no
     type=hybrid
     [options]
