amla only option

--- a/macros/xp.cfg
+++ b/macros/xp.cfg
@@ -25,7 +25,7 @@
         [have_unit]
             x,y=$x1,$y1
             side=$side_number
-            formula="experience >= {COST}"
+            formula="experience >= {COST} and ($Rav_XP_amla_only = 0 or ($Rav_XP_amla_only = 1 and not advances_to))"
             [and]
                 {FILTER}
             [/and]
