--- a/mods/xp_mod.cfg
+++ b/mods/xp_mod.cfg
@@ -3,12 +3,18 @@
     name=_"XP Mod"
     description=_"Spend XP to upgrade units damage/strikes/health/movement.
 
-version 2.3.1 by Ravana - based on work by vn971, Dovolente, itota and Nosmos
+version 2.4.0 by Ravana - based on work by vn971, Dovolente, itota and Nosmos
 
 Units with drain ability have higher upgrade cost"
     require_modification=no
     type=hybrid
     [options]
+    	[checkbox]
+            id=Rav_XP_amla_only
+            default=false
+            name=_"AMLA only"
+            description=_"Allow upgrades only on units that reached their max level"
+        [/checkbox]
         [checkbox]
             id=Rav_XP_hp_enabled
             default=true
@@ -200,12 +206,22 @@ Default settings assumed."
 			local mp = wesnoth.get_variable "Rav_XP_move_enabled"
 			local dmg = wesnoth.get_variable "Rav_XP_damage_enabled"
 			local str = wesnoth.get_variable "Rav_XP_strike_enabled"
+			local amla_only = wesnoth.get_variable "Rav_XP_amla_only"
 			local settings = ""
 			if hp then settings = settings .. "Hitpoints cost: " .. wesnoth.get_variable "Rav_XP_hp_cost" .. " | " else end
 			if mp then settings = settings .. "Movement cost: " .. wesnoth.get_variable "Rav_XP_move_cost" .. " | " else end
 			if dmg then settings = settings .. "Damage cost: " .. wesnoth.get_variable "Rav_XP_damage_cost" .. " | " else end
 			if str then settings = settings .. "Strikes cost: " .. wesnoth.get_variable "Rav_XP_strike_cost" .. " | " else end
-			if settings == "" then else wesnoth.message("XP Mod version 2.3.0",settings) end
+			if settings == "" then else
+				if amla_only then
+					wesnoth.set_variable("Rav_XP_amla_only", 1)
+					settings = settings .. "AMLA only: yes"
+				else
+					wesnoth.set_variable("Rav_XP_amla_only", 0)
+					settings = settings .. "AMLA only: no"
+				end
+				wesnoth.message("XP Mod version 2.4.0", settings) 
+			end
 			>>
         [/lua]
         {CLEAR_VARIABLE Rav_XP_strike_enabled,Rav_XP_damage_enabled,Rav_XP_move_enabled,Rav_XP_hp_enabled,Rav_XP_drainer_penalty}
