improve code quality

--- a/macros/xp.cfg
+++ b/macros/xp.cfg
@@ -1,16 +1,9 @@
 #textdomain wesnoth-XP_Modification
 
 #define XP_MOD_DRAIN
-    #filter by zookeeper via itota
-    [filter_wml]
-        [attack]
-            [specials]
-                [drains]
-                    id=drains
-                [/drains]
-            [/specials]
-        [/attack]
-    [/filter_wml]
+    [has_attack]
+		special_type=drains
+    [/has_attack]
 #enddef
 
 #define XP_MOD_NOT_DRAIN
