--- a/mods/xp_mod.cfg
+++ b/mods/xp_mod.cfg
@@ -3,7 +3,7 @@
     name=_"XP Mod"
     description=_"Spend XP to upgrade units damage/strikes/health/movement.
 
-version 2.4.0 by Ravana - based on work by vn971, Dovolente, itota and Nosmos
+version 2.4.1 by Ravana - based on work by vn971, Dovolente, itota and Nosmos
 
 Units with drain ability have higher upgrade cost"
     require_modification=no
@@ -91,8 +91,7 @@ Units with drain ability have higher upgrade cost"
         first_time_only=no
         [lua]
             code=<<
-helper = wesnoth.require "lua/helper.lua"
-T = helper.set_wml_tag_metatable {}
+T = wml.tag
 
 function wesnoth.wml_actions.xp_mod(cfg)
 
@@ -102,7 +101,7 @@ function wesnoth.wml_actions.xp_mod(cfg)
 	wesnoth.play_sound("fanfare-short.wav")
 
 	unit:add_modification("object", {
-		T.effect (helper.get_child(cfg, "effect"))
+		T.effect (wml.get_child(cfg, "effect"))
 	})
 	unit.experience = unit.experience - cfg.cost
 
