experimental power upgrades

--- a/_main.cfg
+++ b/_main.cfg
@@ -2,3 +2,4 @@
 
 {~add-ons/XP_Modification/macros/xp.cfg}
 {~add-ons/XP_Modification/mods/xp_mod.cfg}
+{~add-ons/XP_Modification/mods/xp_mod_beta.cfg}
