--- a/mods/xp_mod.cfg
+++ b/mods/xp_mod.cfg
@@ -91,7 +91,7 @@ Units with drain ability have higher upgrade cost"
         first_time_only=no
         [lua]
             code=<<
-T = wml.tag
+local T = wml.tag
 
 function wesnoth.wml_actions.xp_mod(cfg)
 
