allow power upgrade reduce uneven attack value 25%

--- a/mods/xp_mod_beta.cfg
+++ b/mods/xp_mod_beta.cfg
@@ -3,11 +3,13 @@
     name=_"XP Mod (Beta)"
     description=_"Experiment where damage and strike upgrades are automatically distributed and upgrade amount is 10% of base value instead of constant. Distribution aims to reach 3.5 damage per strike. May be enabled together with regular XP Mod, but disable strike and damage upgrades there then or amounts can be unexpected. Drain and amla-only logic is not implemented yet.
 
+When base damage or strike is 1, then upgrade is allowed to reduce the other value by 25% to achieve more evenly distributed damage and strikes.
+
 When unit has multiple attacks with same name, upgrade takes lowest values from all of them. So 40-1 and 4-10 with same name are 4-1 for upgrade purpose.
 
 Attacks that are not from unit type might get upgraded, but not tested.
 
-version 2.4.1 by Ravana"
+version 2.4.2 by Ravana"
     require_modification=no
     type=hybrid
     [options]
@@ -34,7 +36,7 @@ local goal_rate = 3.5
 
 function wesnoth.wml_actions.xp_mod_damage(cfg)
 	local event_context = wesnoth.current.event_context
-	local unit = wesnoth.get_unit(event_context.x1, event_context.y1)
+	local unit = wesnoth.units.get(event_context.x1, event_context.y1)
 
 	wesnoth.play_sound("fanfare-short.wav")
 
@@ -63,7 +65,7 @@ function wesnoth.wml_actions.xp_mod_damage(cfg)
 
 	-- read non-default attacks from effect new_attack
 	local extra_attacks = {}
-	for _, o in ipairs(wml.child_array(wml.get_child(unit.__cfg, "modifications"), "object")) do
+	for _, o in ipairs(wml.child_array(wml.get_child(unit.__cfg, "modifications") or error(), "object")) do
 		for _, e in ipairs(wml.child_array(o, "effect")) do
 			if e.apply_to == "new_attack" then
 				print("extra attack", e.name)
@@ -99,10 +101,16 @@ function wesnoth.wml_actions.xp_mod_damage(cfg)
 		local rate = base_damage / base_strikes
 		print("Goal: ", goal_power)
 
-		local good_enough = false
 		local proposed_damage = base_damage
 		local proposed_strikes = base_strikes
-		local proposed_rate = rate
+
+		-- if base_damage is 1 or base_strikes is 1, then allow 25% reduction in the other value
+		if base_damage == 1 and base_strikes >= 4 then
+			proposed_strikes = math.ceil(base_strikes * 0.75)
+		end
+		if base_strikes == 1 and base_damage >= 4 then
+			proposed_damage = math.ceil(base_damage * 0.75)
+		end
 
 		local break_loop = false
 		while not break_loop do
@@ -170,7 +178,6 @@ function wesnoth.wml_actions.xp_mod_damage(cfg)
 	--local floating_message = string.format("<span color='#BCB088'>%s</span>", tostring(desc))
 	--wesnoth.float_label(unit.x, unit.y, floating_message)
 end
-
 >>
         [/lua]
     [/event]
@@ -202,7 +209,7 @@ end
 			local settings = ""
 			settings = settings .. "Power cost: " .. wesnoth.get_variable "Rav_XP_damage_cost_beta" .. " | "
 			if settings == "" then else
-				wesnoth.message("XP Mod version 2.4.1 (beta)", settings) 
+				wesnoth.message("XP Mod version 2.4.2 (beta)", settings)
 			end
 			>>
         [/lua]
