--- a/mods/xp_mod_beta.cfg
+++ b/mods/xp_mod_beta.cfg
@@ -9,7 +9,7 @@ When unit has multiple attacks with same name, upgrade takes lowest values from 
 
 Attacks that are not from unit type might get upgraded, but not tested.
 
-version 2.4.2 by Ravana"
+version 2.4.3 by Ravana"
     require_modification=no
     type=hybrid
     [options]
@@ -31,9 +31,6 @@ version 2.4.2 by Ravana"
             code=<<
 local T = wml.tag
 
--- damage / strikes
-local goal_rate = 3.5
-
 function wesnoth.wml_actions.xp_mod_damage(cfg)
 	local event_context = wesnoth.current.event_context
 	local unit = wesnoth.units.get(event_context.x1, event_context.y1)
@@ -41,20 +38,27 @@ function wesnoth.wml_actions.xp_mod_damage(cfg)
 	wesnoth.play_sound("fanfare-short.wav")
 
 	-- optimization: treat attack name as id. If one unit has multiple attacks with same name, treat them as single attack - use lowest strikes and lowest damage out of them
-
-	-- name -> {base_damage, base_strikes}
+	-- improvement to use name+type+range as key
+	-- {name, type, range} -> {base_damage, base_strikes, attack_description, original damage/strikes rate}
 	local unit_attacks = {}
+	-- array of keys of unit_attacks
+	local unit_attacks_sort_order = {}
 
 	local function record_attacks(array)
 		for _, attack in ipairs(array) do
-			if unit_attacks[attack.name] then
-				print("known attack", attack.name)
-				local result = unit_attacks[attack.name]
+			attack_key = {attack.name, attack.type, attack.range}
+			if unit_attacks[attack_key] then
+				--print("known attack", attack.name, attack.type, attack.range)
+				local result = unit_attacks[attack_key]
 				result[1] = math.min(attack.damage, result[1])
 				result[2] = math.min(attack.number, result[2])
+				-- no need to change result[3]
+				result[4] = result[1]/result[2]
+				-- no need to change unit_attacks_sort_order
 			else
-				print("new attack", attack.name)
-				unit_attacks[attack.name] = { attack.damage, attack.number }
+				--print("new attack", attack.name, attack.type, attack.range)
+				unit_attacks[attack_key] = { attack.damage, attack.number, attack.description, attack.damage / attack.number }
+				table.insert(unit_attacks_sort_order, attack_key)
 			end
 		end
 	end
@@ -68,7 +72,7 @@ function wesnoth.wml_actions.xp_mod_damage(cfg)
 	for _, o in ipairs(wml.child_array(wml.get_child(unit.__cfg, "modifications") or error(), "object")) do
 		for _, e in ipairs(wml.child_array(o, "effect")) do
 			if e.apply_to == "new_attack" then
-				print("extra attack", e.name)
+				--print("extra attack", e.name)
 				table.insert(extra_attacks, e)
 			end
 		end
@@ -92,14 +96,32 @@ function wesnoth.wml_actions.xp_mod_damage(cfg)
 	}
 	local desc = ""
 	-- for each attack insert effect
-	for attack_name, data in pairs(unit_attacks) do
+	for _, attack_key in ipairs(unit_attacks_sort_order) do
+		data = unit_attacks[attack_key]
+		-- for attack_key, data in pairs(unit_attacks) do
+		local attack_name = attack_key[1]
+		local attack_type = attack_key[2]
+		local attack_range = attack_key[3]
+		local attack_description = data[3] or attack_name
+	
 		local base_damage = data[1]
 		local base_strikes = data[2]
 		local base_power = base_damage * base_strikes
+		
+		local original_rate = data[4]
+		
+		-- damage / strikes
+		local goal_rate = 3.5
+		if original_rate < goal_rate then
+			goal_rate = math.max(2, original_rate)
+		end
+		if original_rate > goal_rate then
+			goal_rate = math.min(5, original_rate)
+		end
 
 		local goal_power = base_damage * base_strikes * (1 + power_percent / 100)
 		local rate = base_damage / base_strikes
-		print("Goal: ", goal_power)
+		--print("Goal: ", goal_power)
 
 		local proposed_damage = base_damage
 		local proposed_strikes = base_strikes
@@ -118,39 +140,39 @@ function wesnoth.wml_actions.xp_mod_damage(cfg)
 			-- if making any change, set break_loop to false
 
 			local if_damage = (proposed_damage + 1) * (proposed_strikes)
-			print("if damage: ", (proposed_damage + 1), "-", (proposed_strikes), "=", if_damage)
+			--print("if damage: ", (proposed_damage + 1), "-", (proposed_strikes), "=", if_damage)
 			local if_damage_rate = (proposed_damage + 1) / (proposed_strikes)
 			local can_damage = false
 			if if_damage <= math.ceil(goal_power) then
 				can_damage = true
 			end
 			local if_strikes = (proposed_damage) * (proposed_strikes + 1)
-			print("if strikes: ", (proposed_damage), "-", (proposed_strikes + 1), "=", if_strikes)
+			--print("if strikes: ", (proposed_damage), "-", (proposed_strikes + 1), "=", if_strikes)
 			local if_strikes_rate = (proposed_damage) / (proposed_strikes + 1)
 			local can_strikes = false
 			if if_strikes <= math.ceil(goal_power) then
 				can_strikes = true
 			end
 
-			print("damage rate", if_damage_rate, "strike rate", if_strikes_rate)
+			--print("damage rate", if_damage_rate, "strike rate", if_strikes_rate)
 			if can_damage and can_strikes then
 				if math.abs(if_damage_rate - goal_rate) <= math.abs(if_strikes_rate - goal_rate) then
-					print("pick damage")
+					--print("pick damage")
 					proposed_damage = proposed_damage + 1
 					break_loop = false
 				else
-					print("pick strike")
+					--print("pick strike")
 					proposed_strikes = proposed_strikes + 1
 					break_loop = false
 				end
 			else
 				if can_damage then
-					print("pick_damage")
+					--print("pick_damage")
 					proposed_damage = proposed_damage + 1
 					break_loop = false
 				else
 					if can_strikes then
-						print("pick_strike")
+						--print("pick_strike")
 						proposed_strikes = proposed_strikes + 1
 						break_loop = false
 					end
@@ -160,10 +182,12 @@ function wesnoth.wml_actions.xp_mod_damage(cfg)
 		table.insert(object, T.effect {
 			apply_to = "attack",
 			name = attack_name,
+			type = attack_type,
+			range = attack_range,
 			increase_damage = proposed_damage - base_damage,
 			increase_attacks = proposed_strikes - base_strikes
 		})
-		desc = desc .. " | " .. attack_name .. " (+" .. tostring(proposed_damage - base_damage) .. ", +" .. tostring(proposed_strikes - base_strikes) .. ")"
+		desc = desc .. " | " .. attack_description .. " (+" .. tostring(proposed_damage - base_damage) .. ", +" .. tostring(proposed_strikes - base_strikes) .. ")"
 	end
 	desc = desc .. " | Power modifer: +" .. tostring(power_percent) .. "%"
 
@@ -209,7 +233,7 @@ end
 			local settings = ""
 			settings = settings .. "Power cost: " .. wesnoth.get_variable "Rav_XP_damage_cost_beta" .. " | "
 			if settings == "" then else
-				wesnoth.message("XP Mod version 2.4.2 (beta)", settings)
+				wesnoth.message("XP Mod version 2.4.3 (beta)", settings)
 			end
 			>>
         [/lua]
